@@ -1,3 +1,13 @@
+2005-02-10  David Harrison  <harrison@apple.com>
+
+        Reviewed by Darin.
+
+        <rdar://problem/3991848> Double-click on first character selects wrong item
+
+        * khtml/editing/selection.cpp:
+        (khtml::Selection::validate):
+        Honor the fact that clicking on a character positions the cursor on the left side of the character.
+
 2005-02-10  David Hyatt  <hyatt@apple.com>
 
 	Fix for 3980778, repro crash in RootInlineBox::paint.  Make sure that when merging blocks we dirty them for layout
